--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express-http-context": "^1.2.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -37,6 +39,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "shortid": "^2.2.16",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.3.3",
     "winston": "^3.6.0"
   },
