Fix : delete admin API path params. Fix : update api response update

--- a/.env
+++ b/.env
@@ -2,12 +2,20 @@ PORT=3000
 HOST_URL="http://localhost:3000"
 
 # DATABASE CONFIG
+
 POSTGRES_HOST='localhost'
 POSTGRES_PORT=3001
 POSTGRES_USERNAME='postgres'
 POSTGRES_PASSWORD='admin'
 POSTGRES_DATABASE='facit-local'
 POSTGRES_SYNCHRONIZE=true
+
+# POSTGRES_HOST='facitdatasystems.cf3xbygwr5uj.eu-west-2.rds.amazonaws.com'
+# POSTGRES_PORT=5432
+# POSTGRES_USERNAME='postgres'
+# POSTGRES_PASSWORD='Facit123'
+# POSTGRES_DATABASE='postgres'
+# POSTGRES_SYNCHRONIZE=false
 
 # ADMIN TOKEN CONFIG
 JWT_ADMIN_TOKEN_SECRET="BetUcabJuvwFnqetivzzj9VHI8IlJxRhjr"
