--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "express-http-context": "^1.2.4",
     "passport": "^0.5.2",
