Fix : Add PO File upload in Create Account Api

--- a/.env
+++ b/.env
@@ -17,6 +17,10 @@ POSTGRES_SYNCHRONIZE=true
 # POSTGRES_DATABASE='postgres'
 # POSTGRES_SYNCHRONIZE=false
 
+# Assets Destination Config
+ASSET_ROOT="assets"
+PO_FILES_PATH="po_files"
+
 # ADMIN TOKEN CONFIG
 JWT_ADMIN_TOKEN_SECRET="BetUcabJuvwFnqetivzzj9VHI8IlJxRhjr"
 ADMIN_TOKEN_EXPIRES_IN_DAY=1
