--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "express-http-context": "^1.2.4",
+    "mime-types": "^2.1.35",
+    "nestjs-form-data": "^1.6.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -43,6 +45,7 @@
     "shortid": "^2.2.16",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.3.3",
+    "uuid": "^8.3.2",
     "winston": "^3.6.0"
   },
   "devDependencies": {
