--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "express-http-context": "^1.2.4",
     "mime-types": "^2.1.35",
+    "moment": "^2.29.3",
     "nestjs-form-data": "^1.6.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
